internal/compiler/gogen/testdata/invalid_conditional_controls/App.tue
<template>
	<main>
		<p v-else-if="ready">Orphan else-if</p>
		<p v-else>Orphan else</p>

		<p v-if="status">Wrong if type</p>
		<p v-else-if="isReady(true)">Unsupported else-if</p>

		<template v-switch="items"></template>
		<div v-switch="status"></div>
		<template v-switch="status">
			<p>Missing branch directive</p>
			<p v-case="count">Wrong case type</p>
			<p v-default>Default</p>
			<p v-case='"late"'>Late case</p>
			<p v-default>Duplicate default</p>
			<p v-case='"mixed"' v-if="ready">Mixed controls</p>
		</template>

		<p v-case='"orphan"'>Orphan case</p>
		<p v-default>Orphan default</p>
		<template v-switch="selected">
			<p v-case="candidate">Struct case</p>
		</template>
		<template v-switch="buffer">
			<p v-case="candidateBuffer">Imported struct case</p>
		</template>
	</main>
</template>

<script lang="go">
package app

import "bytes"

type Filter struct {
	Tags []string
}

type App struct {
	ready           bool
	status          string
	count           int
	items           []string
	selected        Filter
	candidate       Filter
	buffer          bytes.Buffer
	candidateBuffer bytes.Buffer
}

func (a *App) isReady(enabled bool) bool {
	return enabled
}
</script>
